...
                    SocialView()
                } else {
                    LoginView(isLoggedInToSocial: $isLoggedInToSocial)
                }
            }
            .tabItem {
                Image(systemName: "person.2.fill")
            }
            .accessibility(identifier: "socialViewTab")
        }
        .accentColor(.white)
        .onAppear {
            UITabBar.appearance().barTintColor = .white
...
