...
                        .padding()
                        .accessibility(identifier: "loginButton")
                        NavigationLink(destination: SignupView(vm: vm)) {
                           HStack {
                               Text("Don't have an account?")
                                   .foregroundColor(.gray)
                               Text("Signup")
                                   .foregroundColor(.blue)
                                   .underline()
                                   .bold()
                           }
                       }
                       .padding()
...
